fix: Later Departures header pills overflowing
When the original approach for Later Departures was changed to use a
carousel that renders N copies of the component, we missed that this
broke the auto-trimming feature. An easy way to fix this is to have the
carousel only consist of the departure rows themselves, with the header
pills being fixed.

This includes a style update to ensure we only display the "dividers"
between departure rows when those rows are direct children of a section,
rather than inside a Later Departures component.

--- a/assets/css/v2/lcd_common/departures/later_departures.scss
+++ b/assets/css/v2/lcd_common/departures/later_departures.scss
@@ -6,6 +6,10 @@
   flex-direction: row;
   width: 100%;
   transform: translateX(calc(-100% * var(--later-departures-offset)));
+
+  .departure-row {
+    flex-shrink: 0;
+  }
 }
 
 .later-departures {
